--- a/_posts/2012-06-19-green-energy.textile
+++ b/_posts/2012-06-19-green-energy.textile
@@ -10,7 +10,7 @@ Except it's not quite that simple.
 
 In recent years, the growth in renewable energy supply in the UK has been driven by the "Renewables Obligation":http://en.wikipedia.org/wiki/Renewables_Obligation, a government scheme introduced in 2002, which obliges all licensed electricity suppliers to obtain an annually-increasing proportion of their energy from renewable sources. The proportion began at 3% and in 2012 is 12.4%.
 
-<form><fieldset>
+<fieldset>
 <legend>Warning: moderately technical discussion</legend>
 The Government, through Ofgem, issues accredited renewable generators with one "Renewables Obligation Certificate":http://en.wikipedia.org/wiki/Renewables_Obligation#Renewables_Obligation_Certificates (ROC) for each MWh of renewable output (although since 2009 banding has been introduced, meaning that some sources of supply, such as offshore wind, are issued with more than one ROC per MWh and some less).
 
@@ -21,7 +21,7 @@ Any profits made by Ofgem from buy-out payments are redistributed to energy supp
 In 2010-11, around 71% of the Renewables Obligation was covered by actual supply, with the balance being made up with buy-out payments of &pound;36.99 per MWh. The redistribution per ROC was &pound;14.35. Adding these two figures together, the market value of each ROC was &pound;51.34 (see "Renewables Obligation Annual Report 2010-11":http://www.ofgem.gov.uk/Pages/MoreInformation.aspx?docid=278&refer=Sustainability/Environment/RenewablObl)
 
 By comparison, the wholesale price of electricity in the UK is around &pound;50/MWh.
-</fieldset></form>
+</fieldset>
 
 What the Renewables Obligation means in practice is that renewable energy generators are currently receiving about twice what conventional generators receive per unit of output, subsidised by all of us through our electricity suppliers.
 
@@ -33,14 +33,14 @@ So, back to the question of whether or not to choose a green energy tariff.
 
 The "Green Energy Scheme":http://www.greenenergyscheme.org/ is now widely recognised as the authority on green energy tariffs in the UK. It bases its certification on Ofgem's "Green Supply Guidelines":http://www.ofgem.gov.uk/Pages/MoreInformation.aspx?docid=285&refer=Sustainability/Environment/Policy.
 
-<form><fieldset>
+<fieldset>
 <legend>Warning: more moderately technical discussion</legend>
 In order to qualify for the Green Energy Scheme's Certified Green Tariff, a supplier must meet three criteria, the most significant of which is that it must be "_able to show that it has enough Renewable Energy Guarantee of Origin certificates and has retired or redeemed any Renewable Levy Exemption Certificates associated with the supply_":http://www.greenenergyscheme.org/faqs/.
 
 A "Renewable Energy Guarantee of Origin certificate":http://www.ofgem.gov.uk/Sustainability/Environment/REGOs/Pages/REGOs.aspx (REGO) is a tradeable proof that power has been generated from a renewable resource and, not unlike ROCs, "can be traded throughout the 15 EU member states":http://www.ac-trading.eu/uk/products/renewable_energy_certificate_rec__guarantee_of_origin_goo. And a "Renewable Levy Exemption Certificate":http://www.ofgem.gov.uk/Sustainability/Environment/cclrenexem/Pages/CCLRenewablesExemption.aspx (Renewable LEC) is a similar certificate issued by Ofgem, for non-domestic electricity supply.
 
 I could not track down the current market price for a REGO, but it is likely to be comparable to the Climate Change Levy (from which a Renewable LEC excempts the holder) which "as of April 2012 is &pound;5.09/MWh":http://www.ofgem.gov.uk/Sustainability/Environment/cclrenexem/Pages/CCLRenewablesExemption.aspx.
-</fieldset></form>
+</fieldset>
 
 Certified green energy suppliers in the UK have not necessarily generated any renewable energy, but they will be in possession of a certificate that they have acquired from a renewable energy generator.
 
