--- a/_posts/2012-06-19-green-energy.textile
+++ b/_posts/2012-06-19-green-energy.textile
@@ -4,9 +4,9 @@ title: Choosing a green energy supplier
 category: energy
 standfirst: "It is not quite as simple as it seems" 
 ---
-You might have thought that it would be relatively straight forward for any of us as energy consumers to encourage the supply of low-carbon energy. All we need to do is to choose a green energy tariff from our electricity provider.
+Is it worth going for a green energy tariff and if so which one? It turns out that the answer is not entirely straight forward.
 
-Except it's not quite that simple.
+First, a bit of background.
 
 In recent years, the growth in renewable energy supply in the UK has been driven by the "Renewables Obligation":http://en.wikipedia.org/wiki/Renewables_Obligation, a government scheme introduced in 2002, which obliges all licensed electricity suppliers to obtain an annually-increasing proportion of their energy from renewable sources. The proportion began at 3% and in 2012 is at 12.4%.
 
@@ -44,20 +44,28 @@ I could not track down the current market price for a REGO, but it is likely to 
 
 Certified green energy suppliers in the UK have not necessarily generated any renewable energy, but they will be in possession of a certificate that they have acquired from a renewable energy generator.
 
-Does this lead to increased renewable energy generation? Well, consumers signing up to green tariffs are likely to increase the demand for Renewable Energy certificates (see box above) and therefore put upward pressure on their price, which in turn will benefit renewable energy generating companies, but I rather suspect that the effect is marginal (perhaps an order of magnitude less than the subsidy received through the Renewables Obligation).
+Does this lead to increased renewable energy generation? Well, consumers signing up to green tariffs are likely to increase the demand for Renewable Energy certificates (see box above) and therefore put upward pressure on their price, which in turn will benefit renewable energy generating companies, but I rather suspect that the effect is marginal (perhaps an order of magnitude less than the subsidy received through the Renewables Obligation) and there is likely to be far more renewable capacity in production than there is demand for green tariffs (although not Renewables Obligations, see top box above).
 
-And it is not clear how much of the additional price of a green energy tariff is due to the increased cost of providing it as opposed to the supplier's view of how much customers will pay.
+In particular, changing to a "green" tariff from a major energy supplier is likely to have an effect on renewable production so marginal as to be non-existent and it is not clear how much of the additional price of such a tariff will be due to the increased cost of providing it as opposed to the supplier's view of how much customers will pay.
 
-The market for renewable energy generation is driven by comparative economics, which have been greatly affected in recent years by the Renewables Obligation. The effect of consumer choice in this context is likely to be marginal.
+But there are also a number of suppliers, like "Good Energy":http://www.goodenergy.co.uk/, "LoCO2":http://www.loco2energy.com/ and "Ecotricity":http://www.ecotricity.co.uk/, that invest directly and exclusively in renewable capacity.
 
-Even if none of us becomes customers of companies like "Good Energy":http://www.goodenergy.co.uk/, "LoCO2":http://www.loco2energy.com/ or "Ecotricity":http://www.ecotricity.co.uk/, they are still likely to be able to make a return from their investments in renewable energy generation. As Ofgem have commented, the Renewables Obligation "_is leading to much higher returns for current renewable generators than investors expected or required_":http://www.ofgem.gov.uk/Media/PressRel/Documents1/16662-R5.pdf.
+Good Energy has its "own generating capacity":http://www.goodenergy.co.uk/what-we-are-doing/investing-in-renewables (over 50MW of capacity planned over the next 5 years), but they also act as a consultant to other suppliers and they have a "community of over 35,000 independent suppliers across Britain":http://www.goodenergy.co.uk/switch/where-our-energy-comes-from.
 
-It is entirely understandable that the founders of these trail-blazing energy companies would see the commercial benefit of marketing themselves to consumers as electricity suppliers, but their power generation businesses are unlikely to depend on it. If LoCO2 were to cease trading, their sister company, TLS Hydro, would probably continue to operate their "wonderful array of refurbished water turbines":http://www.tradelinksolutions.com/assets.php. 
+Ecotricity has its own generating capacity, but it has more demand than supply. In 2011, it supplied three times as much electricity as it produced (see their "Progress Report":http://www.ecotricity.co.uk/content/download/15171/243721/version/1/file/ecotricity-progress-report-2011.pdf).
 
-On the other hand, we are all already providing a large subsidy to renewable production through the cost of the Government's Renewables Obligation scheme, which is ultimately paid for by all energy consumers, and the additional contribution we can make through choosing a green tariff is modest by comparison.
+LoCO2, Like Ecotricity, has more demand than supply and supplements its fuel mix in the same way as everyone else, through purchasing Renewable Energy certificates from other suppliers.
+
+So, what difference would switching to one of these suppliers make? Arguably, not much.
+
+Even if none of us becomes customers of these companies, they are still likely to be able to make a return from their investments in renewable energy generation. As Ofgem have commented, the Renewables Obligation "_is leading to much higher returns for current renewable generators than investors expected or required_":http://www.ofgem.gov.uk/Media/PressRel/Documents1/16662-R5.pdf.
+
+Because of the way that electricity is bought and sold, supply of "green energy" in not really constrained by end-user demand. Buying energy is not like buying a car. The Government underwrites supply by a complex, inefficient and generous system of subsidies. When a landowner approaches Good Energy for help with building a wind farm, its Good Energy's technical expertise and understanding of Government regulation that is useful, not their customer base.
+
+It is entirely understandable that the trail-blazing founders of these energy companies would see the commercial benefit of marketing themselves to consumers as electricity suppliers, but their power generation and consultancy businesses are unlikely to depend on it. If LoCO2 were to cease trading, their sister company, TLS Hydro, would probably continue to operate their "wonderful array of refurbished water turbines":http://www.tradelinksolutions.com/assets.php. 
+
+On the other hand, we are all already providing a large subsidy for renewable production through the cost of the Government's Renewables Obligation scheme, which is ultimately paid for by all energy consumers. In that sense we are all already paying a "green" tariff for our electricity whether we want to or not. The additional contribution we can make through choosing a green supplier is modest by comparison.
 
 So, whether or not we sign up for a green energy tariff is less about making a significant practical difference than it is about providing a little additional revenue to a company whose objectives we sympathise with. 
 
 And adding to the profitability of a company like LoCO2 may, after all, lead to TLS Hydro building more turbines, which is unlikely to be a bad thing.
-
-
