--- a/_posts/2012-06-19-green-energy.textile
+++ b/_posts/2012-06-19-green-energy.textile
@@ -46,7 +46,7 @@ Certified green energy suppliers in the UK have not necessarily generated any re
 
 Does this lead to increased renewable energy generation? 
 
-Well, consumers signing up to green tariffs are likely to increase the demand for Renewable Energy certificates (see box above) and therefore put upward pressure on their price, which in turn will benefit renewable energy generating companies, but I rather suspect that the effect is marginal (perhaps an order of magnitude less than the subsidy received through the Renewables Obligation) and there is likely to be far more renewable capacity in production than there is demand for green tariffs (although not Renewables Obligations, see top box above).
+Well, consumers signing up to green tariffs are likely to increase the demand for Renewable Energy certificates (see box above) and therefore put upward pressure on their price, which in turn will benefit renewable energy generating companies, but I rather suspect that the effect is marginal (perhaps an order of magnitude less than the subsidy received through the Renewables Obligation) and there is likely to be far more renewable capacity in production than there is demand for green tariffs.
 
 In particular, changing to a "green" tariff from a major energy supplier is likely to have an effect on renewable production so marginal as to be non-existent and it is not clear how much of the additional price of such a tariff will be due to the increased cost of providing it as opposed to the supplier's view of how much customers will pay.
 
