--- a/_posts/2012-06-19-green-energy.textile
+++ b/_posts/2012-06-19-green-energy.textile
@@ -56,7 +56,7 @@ Good Energy has its "own generating capacity":http://www.goodenergy.co.uk/what-w
 
 Ecotricity has its own generating capacity, but it has more demand than supply. In 2011, it supplied three times as much electricity as it produced (see their "Progress Report":http://www.ecotricity.co.uk/content/download/15171/243721/version/1/file/ecotricity-progress-report-2011.pdf).
 
-LoCO2, Like Ecotricity, has more demand than supply and supplements its fuel mix in the same way as everyone else, through purchasing Renewable Energy certificates from other suppliers.
+LoCO2, like Ecotricity, has more demand than supply and supplements its fuel mix in the same way as everyone else, through purchasing Renewable Energy certificates from other suppliers.
 
 So, what difference would switching to one of these suppliers make? Arguably, not much.
 
