--- a/_posts/2012-06-19-green-energy.textile
+++ b/_posts/2012-06-19-green-energy.textile
@@ -8,13 +8,13 @@ Is it worth going for a green energy tariff and if so which one? It turns out th
 
 First, a bit of background.
 
-In recent years, the growth in renewable energy supply in the UK has been driven by the "Renewables Obligation":http://en.wikipedia.org/wiki/Renewables_Obligation, a government scheme introduced in 2002, which obliges all licensed electricity suppliers to obtain an annually-increasing proportion of their energy from renewable sources. The proportion began at 3% and in 2012 is at 12.4%.
+In recent years, the growth in renewable energy supply in the UK has been driven by the "Renewables Obligation":http://en.wikipedia.org/wiki/Renewables_Obligation, a government scheme introduced in 2002, which obliges all licensed electricity suppliers to obtain an annually-increasing proportion of their energy from renewable sources. The proportion began at 3% and in 2012 is 12.4%.
 
 <fieldset>
 <legend>How the Renewables Obligation works</legend>
 The Government, through "Ofgem":http://www.ofgem.gov.uk/, issues accredited renewable electricity producers with one "Renewables Obligation Certificate":http://en.wikipedia.org/wiki/Renewables_Obligation#Renewables_Obligation_Certificates (ROC) for each MWh of renewable output (although since 2009 banding has been introduced, meaning that some sources of supply, such as offshore wind, are issued with more than one ROC per MWh and some less).
 
-All electricity suppliers must present ROCs to Ofgem to the value of (in 2012) 12.4% of the electricity that they supply to their customers. They can do this either by getting ROCs directly from the Government through generating their own eligible electricity, by buying ROCs either directly from producers or in the secondary market, or by making a payment directly to Ofgem at a fixed "buy-out" price set by Ofgem each year. As long as renewable energy output falls short of the renewable obligation, some energy suppliers will need to make buy-out payments to Ofgem.
+All electricity suppliers must present ROCs to Ofgem to the value of (in 2012) 12.4% of the electricity that they supply to their customers. They can do this by getting ROCs directly from the Government through generating their own eligible electricity, by buying ROCs either directly from producers or in the secondary market, or by making a payment directly to Ofgem at a fixed "buy-out" price set by Ofgem each year. As long as renewable energy output falls short of the renewable obligation, some energy suppliers will need to make buy-out payments to Ofgem.
 
 Any profits made by Ofgem from buy-out payments are redistributed to energy suppliers in direct proportion to the number of ROCs they hold.
 
@@ -27,7 +27,7 @@ What the Renewables Obligation means in practice is that renewable energy genera
 
 And all electricity suppliers are perforce contributing to renewable energy production, either by direct investment in energy production, by the purchase of Renewables Obligation Certificates (see box above) from renewable generating companies, or through buy-out payments to Ofgem which are in turn recycled back into the industry.
 
-Interestingly, Ofgem itself objects to the system of Renewables Obligations on the grounds that out of several carbon reduction schemes studied in a recent European Commission survey, it was the "_the most expensive and least efficient_":http://www.ofgem.gov.uk/SUSTAINABILITY/ENVIRONMENT/POLICY/Documents1/Ofgem%20response%20to%20Renewables%20Obligation%20consultation%5B1%5D.pdf.
+Interestingly, Ofgem itself objects to the system of Renewables Obligations on the grounds that out of several carbon reduction schemes studied in a recent European Commission survey, it was the _""the most expensive and least efficient":http://www.ofgem.gov.uk/SUSTAINABILITY/ENVIRONMENT/POLICY/Documents1/Ofgem%20response%20to%20Renewables%20Obligation%20consultation%5B1%5D.pdf"_.
 
 So, back to the question of whether or not to choose a green energy tariff. 
 
@@ -50,9 +50,9 @@ Well, consumers signing up to green tariffs are likely to increase the demand fo
 
 In particular, changing to a "green" tariff from a major energy supplier is likely to have an effect on renewable production so marginal as to be non-existent and it is not clear how much of the additional price of such a tariff will be due to the increased cost of providing it as opposed to the supplier's view of how much customers will pay.
 
-But there are also a number of suppliers, like "Good Energy":http://www.goodenergy.co.uk/, "LoCO2":http://www.loco2energy.com/ and "Ecotricity":http://www.ecotricity.co.uk/, that invest directly and exclusively in renewable capacity.
+But there are also a number of suppliers, like "Good Energy":http://www.goodenergy.co.uk/, "LoCO2":http://www.loco2energy.com/ and "Ecotricity":http://www.ecotricity.co.uk/, that invest directly and exclusively in renewable capacity (although, of these three, only Good Energy is part of the Green Energy Scheme).
 
-Good Energy has its "own generating capacity":http://www.goodenergy.co.uk/what-we-are-doing/investing-in-renewables (over 50MW of capacity planned over the next 5 years), but they also act as a consultant to other producers and they apparently have a "community of over 35,000 independent suppliers across Britain":http://www.goodenergy.co.uk/switch/where-our-energy-comes-from.
+Good Energy has its "own generating capacity":http://www.goodenergy.co.uk/what-we-are-doing/investing-in-renewables (over 50MW of capacity planned over the next 5 years), but they also act as a consultant to other producers and they have a _""community of over 35,000 independent suppliers across Britain":http://www.goodenergy.co.uk/switch/where-our-energy-comes-from"_.
 
 Ecotricity has its own generating capacity, but it has more demand than supply. In 2011, it supplied three times as much electricity as it produced (see their "Progress Report":http://www.ecotricity.co.uk/content/download/15171/243721/version/1/file/ecotricity-progress-report-2011.pdf).
 
@@ -60,13 +60,13 @@ LoCO2, like Ecotricity, has more demand than supply and supplements its fuel mix
 
 So, what difference would switching to one of these suppliers make? Arguably, not much.
 
-Even if none of us was to become a customer of any of these companies, they are still likely to be able to make a return from their investments in renewable energy generation. As Ofgem have commented, the Renewables Obligation "_is leading to much higher returns for current renewable generators than investors expected or required_":http://www.ofgem.gov.uk/Media/PressRel/Documents1/16662-R5.pdf.
+Even if none of us was to become a customer of any of these companies, they are still likely to be able to make a return from their investments in renewable energy generation. As Ofgem have commented, the Renewables Obligation _""is leading to much higher returns for current renewable generators than investors expected or required":http://www.ofgem.gov.uk/Media/PressRel/Documents1/16662-R5.pdf"_.
 
 Because of the way that electricity is bought and sold, supply of "green energy" in not really constrained by end-user demand. Buying energy is not like buying a car. The Government underwrites supply by a complex, inefficient and generous system of subsidies. When a landowner approaches Good Energy for help with building a wind farm, it is Good Energy's technical expertise and understanding of Government regulation that is useful, not their customer base.
 
 It is entirely understandable that the trail-blazing founders of these energy companies would see the commercial benefit of marketing themselves to consumers as electricity suppliers, but their power generation and consultancy businesses are unlikely to depend on it. If LoCO2 were to cease trading, their sister company, TLS Hydro, would probably continue to operate their "wonderful array of refurbished water turbines":http://www.tradelinksolutions.com/assets.php. 
 
-On the other hand, we are all already providing a large subsidy for renewable production through the cost of the Government's Renewables Obligation scheme, which is ultimately paid for by all energy consumers. In that sense we are all already paying a "green" tariff for our electricity whether we want to or not. The additional contribution we can make through choosing a green supplier is modest by comparison.
+On the other hand, we are all already providing a large subsidy for renewable production through the cost of the Government's Renewables Obligation scheme, which is ultimately paid for by all energy consumers. In that sense we are all already paying a green tariff for our electricity whether we want to or not. The additional contribution we can make through choosing a green supplier is modest by comparison.
 
 So, whether or not we sign up for a green energy tariff is less about making a significant practical difference than it is about providing a little additional revenue to a company whose objectives we sympathise with. 
 
