--- a/_posts/2012-07-11-javascript-application-frameworks.textile
+++ b/_posts/2012-07-11-javascript-application-frameworks.textile
@@ -20,7 +20,7 @@ Here is a shoddy and ill-informed summary of the implementations:
 
 "Backbone.js":http://addyosmani.github.com/todomvc/architecture-examples/backbone/index.html. There is less going on in the HTML source. It is not very clear what is going on in the background. The source contains separate template markup. The JavaScript is split up into several folders. Most of the code is in _views/app.js_ and _views/todos.js_ . It's readable code, but not as terse as AngularJS, nor is the connexion clear between the markup and the behaviour of the application. For  "Backbone.js + RequireJS":http://addyosmani.github.com/todomvc/dependency-examples/backbone_require/index.html the template fragments are moved out of the HTML markup and into separate template files.
 
-"Ember.js":http://addyosmani.github.com/todomvc/architecture-examples/emberjs/index.html. There is a wonderful simplicity to the Ember application. Just one HTML page and one app.js file. The HTML content is made up almost entirely of _{{#view}}_ and _{{collection}}_ handlers with no embedded HTML markup at all (I expect Avi would approve). It is not quite as terse as AngularJS, but it is not far off. Very nice.
+"Ember.js":http://addyosmani.github.com/todomvc/architecture-examples/emberjs/index.html. There is a wonderful simplicity to the Ember application. Just one HTML page and one app.js file. The HTML content is made up almost entirely of _\{\{#view\}\}_ and _\{\{collection\}\}_ handlers with no embedded HTML markup at all (I expect Avi would approve). It is not quite as terse as AngularJS, but it is not far off. Very nice.
 
 "Spine.js":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. "Some people prefer spine over angular":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/.
 
