--- a/_posts/2012-07-11-javascript-application-frameworks.textile
+++ b/_posts/2012-07-11-javascript-application-frameworks.textile
@@ -22,7 +22,7 @@ Here is a shoddy and ill-informed summary of the implementations:
 
 "Ember.js":http://addyosmani.github.com/todomvc/architecture-examples/emberjs/index.html. There is a wonderful simplicity to the Ember application. Just one HTML page and one app.js file. The HTML content is made up almost entirely of _\{\{#view\}\}_ and _\{\{collection\}\}_ handlers with no embedded HTML markup at all (I expect Avi would approve). It is not quite as terse as AngularJS, but it is not far off. Very nice.
 
-"Spine.js":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. "Some people prefer spine over angular":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/.
+"Spine.js":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. And "some people prefer spine over angular":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/.
 
 "Knockout (MVVM)":http://addyosmani.github.com/todomvc/architecture-examples/knockoutjs/index.html. Does data binding in the HTMl markup rather like AngularJS with _data-bind_ attributes. Also, like Ember.js, the source is all contained in a single file. But with function calls like _ko.bindingHandlers.hasfocus.init_ it gives the appearance of being a bit more low-level than some other frameworks, it least to a simple-minded amateur like me. On the other hand, someone recently commented that "it's quite similar to AngularJS and Ember, but feels more mature than either, and has great documentation.":http://news.ycombinator.com/item?id=4147035. It has come out of Microsoft.
 
