--- a/_posts/2012-07-11-javascript-application-frameworks.textile
+++ b/_posts/2012-07-11-javascript-application-frameworks.textile
@@ -24,7 +24,7 @@ Here is a shoddy and ill-informed summary of the implementations:
 
 "Spine.js":http://addyosmani.github.com/todomvc/architecture-examples/spine/index.html. It's CoffeeScript. And very neat, too. _src/app.coffee_, _src/controllers/todos.coffee_ and _src/models/todo.coffee_ are all short and readable. And "some people prefer spine over angular":http://edwardhotchkiss.com/blog/2012/03/11/jekyll-live-search-with-angular.js/.
 
-"Knockout (MVVM)":http://addyosmani.github.com/todomvc/architecture-examples/knockoutjs/index.html. Data binding is done in the HTML markup, rather like AngularJS, with _data-bind_ attributes. Also, like Ember.js, the source is all contained in a single file. But with function calls like _ko.bindingHandlers.hasfocus.init_ it gives the appearance of being a bit more low-level than some other frameworks, it least to a simple-minded amateur like me. On the other hand, someone recently commented that "it's quite similar to AngularJS and Ember, but feels more mature than either, and has great documentation.":http://news.ycombinator.com/item?id=4147035. It has come out of Microsoft.
+"Knockout (MVVM)":http://addyosmani.github.com/todomvc/architecture-examples/knockoutjs/index.html. Data binding is done in the HTML markup, rather like AngularJS, with _data-bind_ attributes. Also, like Ember.js, the source is all contained in a single file. But with function calls like _ko.bindingHandlers.hasfocus.init_ it gives the appearance of being a bit more low-level than some other frameworks, at least to a simple-minded amateur like me. On the other hand, someone recently commented that "it's quite similar to AngularJS and Ember, but feels more mature than either, and has great documentation.":http://news.ycombinator.com/item?id=4147035. It has come out of Microsoft.
 
 Of the others, "Dojo":http://addyosmani.github.com/todomvc/architecture-examples/dojo/index.html possibly asks too much of the developer, "Closure":http://addyosmani.github.com/todomvc/architecture-examples/closure/index.html#/ looks like it requires a fair bit of development overhead, but as it is used for Gmail and other Google applications it is likely to be a good choice for _serious_ applications (nothing I am likely to build, then). "YUILibrary":http://addyosmani.github.com/todomvc/architecture-examples/yuilibrary/index.html is not terribly readable.
 "Knockback.js":http://addyosmani.github.com/todomvc/architecture-examples/knockback/index.html might have made sense if I liked the Knockout way of doing things, already used Backbone.js and wanted to develop in CoffeeScript. "Agility.js":http://addyosmani.github.com/todomvc/architecture-examples/agilityjs/index.html looks simple and readable. "Google Web Toolkit":http://addyosmani.github.com/todomvc/architecture-examples/gwt/index.html is Java. forget it. And "jQuery":http://addyosmani.github.com/todomvc/architecture-examples/jquery/index.html on its own is actually not too verbose. It is still worth considering if I am not doing anything too fancy.
